[gd_scene load_steps=34 format=2]

[ext_resource path="res://Enemies/Sprites/Lizard/lizard_idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Sprites/Lizard/lizard_spit.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Sprites/Lizard/lizard_walk.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Sprites/Lizard/lizard_death.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Lizard/Small_Lizard.gd" type="Script" id=5]
[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shaders/flash.tres" type="Shader" id=7]
[ext_resource path="res://Sound Effects/Hit 1.mp3" type="AudioStream" id=8]
[ext_resource path="res://Enemies/Enemy_Abstract_Class.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=24]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 54, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 108, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 162, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 54, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 162, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 54, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 162, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 270, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 324, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 378, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 54, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 54, 25 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "load_attack",
"speed": 9.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( -15, -4, -10, -4, 15, 2, 15, 8, -15, 8 )

[node name="Small_Lizard" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 24 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 23 )

[node name="spit_spawn_location" type="Position2D" parent="."]
position = Vector2( -18, 0 )

[node name="Health_Bar" parent="." instance=ExtResource( 6 )]
margin_left = -50.0
margin_top = -12.0
margin_right = 50.0
margin_bottom = 28.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="ShootingCooldown" type="Timer" parent="."]

[node name="walking" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Enemy_Abstract_Class" parent="." instance=ExtResource( 9 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShootingCooldown" to="." method="_on_ShootingCooldown_timeout"]
